# nasa_api

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
fixtures/: products.json
helpers/: nasa_helper.py  senamhi_helper.py
models/: crop.py
services/: crop_service.py  nasa_service.py  senamhi_service.py
